@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-9
-Date: 2011-11-25
+Date: 2011-11-28
 Depends:
 Suggests: np, npRmpi, rgl, quadprog, quantreg
 Title: Categorical Regression Splines
